# Thamania_task-customer-churn

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  sync_automation.ps1  sync_config.ps1  sync_docker.ps1  sync_linting.ps1
project_config/: README.md  pyproject.toml
project_files/: README_api.md  requirements.txt
project_files/automation/: .pre-commit-config.yaml  Makefile  README.md  setup-automation.ps1  tasks.ps1
project_files/config/: retraining_config.json
project_files/docker/: DOCKER.md  README.md  docker-setup.ps1
project_files/documentation/: README.md  api_documentation.md  index.md  technical_report.md
project_files/linting/: README.md  format.ps1  lint.ps1
project_files/mlflow/: README.md  __init__.py  experiment_tracker.py  mlflow.db  mlflow_config.py  run_experiments.py  start_mlflow_ui.ps1
project_files/models/: churn_model_20250802_222551.pkl  preprocessing_20250802_213432.pkl  retraining_log.txt
project_files/models/backup/: backup_20250802_213430_churn_model_20250802_213426.pkl  backup_20250802_213430_feature_columns_20250802_213426.json
project_files/monitoring/: README.md  __init__.py  drift_detection.py  monitoring_orchestrator.py  performance_monitor.py  run_monitoring.py
project_files/src/: customer_churn_prediction.py
project_files/src/api/: fastapi_app.py
project_files/src/model_retraining/: README_retraining.md  __init__.py  model_monitoring.py  model_retraining.py  retraining_scheduler.py
