[project]
name = "thamania-task-updated"
version = "0.1.0"
description = "Customer Churn Prediction with FastAPI and Machine Learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "python-multipart>=0.0.5",
    "imbalanced-learn>=0.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "mlflow>=1.20.0",
    "scipy>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "httpx>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "httpx>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
